# liblife

./: .travis.yml  Cargo.toml  LICENSE  Lifechangeee  README.md
src/: cell.rs  generation.rs  lib.rs  result.rs  ruleset.rs
