[package]
name = "liblife"
description = "A basic crate to build Conway's Game of Life applications with Rust."
version = "0.1.0"
authors = ["Luiz de Prá <rawarkanis@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/luizdepra/liblife.git"
homepage = "https://github.com/luizdepra/liblife"
documentation = "https://docs.rs/liblife/"

[dependencies]
itertools = "0.8.0"
